# bazel-mcp

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .release-please-config.json  .renovaterc.json5  404.html  AGENTS.md  BUILD.bazel  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LEARNINGS.md  LICENSE  MODULE.bazel  Makefile  README.md  SECURITY.md  deny.toml  flake.nix  hawk.toml  index.html  llms-full.txt  llms.txt  rust-toolchain.toml  rustfmt.toml  sitemap-0.xml  sitemap-index.xml
crates/bazel-mcp-benchmark/: Cargo.toml
crates/bazel-mcp-benchmark/benches/: custom_reducers.rs  reduction.rs
crates/bazel-mcp-benchmark/fixtures/storage/: baseline-turso-2cdf8e9-macos-aarch64.json  filesystem-macos-aarch64.json  filesystem-optimized-6b0f2d1-macos-aarch64.json  filesystem-optimized-extended-startup-macos-aarch64.json  filesystem-pre-optimization-0b1eb8d-macos-aarch64.json
crates/bazel-mcp-benchmark/resources/agentic/: abseil-cpp.toml
crates/bazel-mcp-benchmark/resources/projects/: abseil-cpp.toml
crates/bazel-mcp-benchmark/resources/protocol/: legacy-tasks.jsonl  synchronous.jsonl  tasks-extension.jsonl
crates/bazel-mcp-benchmark/resources/scenarios/abseil-cpp/: BUILD.bazel  compile_failure.cc  noisy_failure.sh  success.cc  test_failure.cc
crates/bazel-mcp-benchmark/src/: agentic.rs  corpus.rs  harness.rs  lib.rs  live_agent.rs  report.rs  transcript.rs
crates/bazel-mcp-bep/: AGENTS.md  BUILD.bazel  Cargo.toml  build.rs  proto_descriptor.bzl
crates/bazel-mcp-bep/proto/: PROVENANCE.md  build_event_stream_subset.proto
crates/bazel-mcp-bep/src/: framing.rs  lib.rs
crates/bazel-mcp-bep/tests/: adversarial.rs
crates/bazel-mcp-bep/tests/fixtures/: nested-out-of-order.bep  truncated.bep  unknown-fields.bep
crates/bazel-mcp-bes/: AGENTS.md  BUILD.bazel  Cargo.toml  build.rs
crates/bazel-mcp-bes/proto/: PROVENANCE.md  publish_build_event_subset.proto
crates/bazel-mcp-bes/src/: codec.rs  lib.rs  server.rs
crates/bazel-mcp-policy/: BUILD.bazel  Cargo.toml
crates/bazel-mcp-policy/src/: command.rs  config.rs  environment.rs  executable.rs  flags.rs  lib.rs  redaction.rs  workspace.rs
crates/bazel-mcp-reducer/: AGENTS.md  BUILD.bazel  Cargo.toml
crates/bazel-mcp-reducer-cases/: BUILD.bazel  Cargo.toml  README.md
crates/bazel-mcp-reducer-cases/src/: lib.rs  main.rs  manifest.rs  mcp.rs  replay.rs  sanitize.rs  semantics.rs
crates/bazel-mcp-reducer-cases/tests/: corpus.rs
crates/bazel-mcp-reducer/src/: budget.rs  build.rs  coverage.rs  extension.rs  lib.rs  query.rs  starlark.rs  test.rs  test_evidence.rs  text.rs
crates/bazel-mcp-reducer/src/diagnostics/: arbitration.rs  bazel.rs  cpp.rs  go.rs  java.rs  javascript.rs  mod.rs  protobuf.rs  python.rs  rust.rs  starlark.rs  typescript.rs
crates/bazel-mcp-reducer/tests/: golden.rs  test_log_golden.rs
crates/bazel-mcp-reducer/tests/fixtures/bazel-7/: cached-tests.bep  cached-tests.expected.json  cached-tests.stderr  cached-tests.stdout  loading.bep  (+12 more)
crates/bazel-mcp-runner/: AGENTS.md  BUILD.bazel  Cargo.toml
crates/bazel-mcp-runner/src/: artifacts.rs  cancel.rs  capture.rs  driver.rs  evidence.rs  execution.rs  inspection.rs  lib.rs  output_base_lock.rs  scheduler.rs  service.rs  test_evidence.rs  version.rs
crates/bazel-mcp-runner/tests/: process.rs
crates/bazel-mcp-server/: BUILD.bazel  Cargo.toml
crates/bazel-mcp-server/src/: agent.rs  config.rs  handler.rs  lib.rs  main.rs  protocol.rs  result.rs  tasks.rs
crates/bazel-mcp-server/tests/: agent_cli.rs  shutdown.rs
crates/bazel-mcp-store/: BUILD.bazel  Cargo.toml
crates/bazel-mcp-store/migrations/: 0001_initial.sql  0002_targets_coverage.sql  0003_canonical_arguments.sql  0004_cancellation_reason.sql  0005_deferred_results.sql
crates/bazel-mcp-store/src/: config.rs  coordination.rs  cursor.rs  database.rs  deferred_repository.rs  files.rs  index.rs  index_coordinator.rs  invocation_repository.rs  lib.rs  manifest.rs  manifest_repository.rs  metrics.rs  query_paging.rs  record.rs  recovery.rs  retention.rs  storage.rs  telemetry.rs
crates/bazel-mcp-store/tests/fixtures/: manifest-v1.json
crates/bazel-mcp-types/: BUILD.bazel  Cargo.toml
crates/bazel-mcp-types/src/: artifact.rs  command.rs  coverage.rs  deferred.rs  diagnostic.rs  inspection.rs  invocation.rs  lib.rs  pagination.rs  query.rs  result.rs  test.rs
crates/diagnostic-reducer/: AGENTS.md  BUILD.bazel  Cargo.toml  README.md
crates/diagnostic-reducer-cli/: AGENTS.md  BUILD.bazel  Cargo.toml  README.md
crates/diagnostic-reducer-cli/src/: lib.rs  main.rs
crates/diagnostic-reducer-core/: AGENTS.md  BUILD.bazel  Cargo.toml  README.md
crates/diagnostic-reducer/benches/: streaming.rs
crates/diagnostic-reducer/examples/: reduce.rs
crates/diagnostic-reducer/src/: finalize.rs  lib.rs  model.rs  redaction.rs  streaming.rs  test_failures.rs  text.rs
crates/diagnostic-reducer/src/diagnostics/: arbitration.rs  aspect.rs  common.rs  cpp.rs  go.rs  java.rs  javascript.rs  mod.rs  protobuf.rs  python.rs  rust.rs  starlark.rs  typescript.rs
crates/diagnostic-reducer/tests/: streaming_equivalence.rs
examples/bazel-core/cases/: BUILD.bazel  failure_rules.bzl
examples/cpp/cases/: BUILD.bazel  assertion_failure_test.cc  missing_header.cc  runtime_exception_test.cc  success.cc  type_mismatch.cc  undefined_reference.cc
examples/node/: BUILD.bazel  MODULE.bazel  README.md  success.js
examples/node/cases/: BUILD.bazel  runtime_failure.js  swc_driver.js  swc_syntax_failure.ts  syntax_failure.js  type_failure.ts
examples/python/: BUILD.bazel  MODULE.bazel  README.md  success.py
examples/python/cases/: BUILD.bazel  import_failure.py  syntax_failure.py  traceback_failure.py
examples/rust/: BUILD.bazel  MODULE.bazel  README.md  success.rs
examples/rust/cases/: BUILD.bazel  assertion_failure.rs  type_mismatch.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bep_event_stream.rs  bep_framing.rs  bes_request_decode.rs  cursor_decode.rs  diagnostic_reducer.rs  lifecycle_sequence.rs  logcompact.rs  named_file_sets.rs  redaction.rs
(+389 files in other folders)
