[package]
name = "bazel-mcp-benchmark"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
bazel-mcp-reducer.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tiktoken-rs.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "reduction"
harness = false

[[bin]]
name = "token-integration"
path = "src/bin/token-integration.rs"
