[package]
name = "bazel-mcp-benchmark"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
bazel-mcp-bep.workspace = true
bazel-mcp-policy.workspace = true
bazel-mcp-reducer.workspace = true
bazel-mcp-store.workspace = true
bazel-mcp-types.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tiktoken-rs.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "reduction"
harness = false

[[bin]]
name = "token-integration"
path = "src/bin/token-integration.rs"

[[bin]]
name = "agentic-benchmark"
path = "src/bin/agentic-benchmark.rs"

[[bin]]
name = "bazel-agentic-shell"
path = "src/bin/bazel-agentic-shell.rs"

[[bin]]
name = "storage-benchmark"
path = "src/bin/storage-benchmark.rs"
