load("@crates//:defs.bzl", "all_crate_deps")
load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_rs//rs:cargo_build_script.bzl", "cargo_build_script")
load("@rules_rs//rs:rust_library.bzl", "rust_library")
load("@rules_rs//rs:rust_test.bzl", "rust_test")

proto_library(
    name = "bep_descriptor",
    srcs = ["proto/build_event_stream_subset.proto"],
    strip_import_prefix = "/crates/bazel-mcp-bep/proto",
)

cargo_build_script(
    name = "bazel_mcp_bep_build_script",
    srcs = ["build.rs"],
    build_script_env = {
        "BAZEL_BEP_DESCRIPTOR": "$(execpath :bep_descriptor)",
    },
    crate_name = "bazel_mcp_bep_build_script",
    data = glob(["proto/**"]) + [":bep_descriptor"],
    deps = all_crate_deps(
        build = True,
    ),
)

rust_library(
    name = "bazel_mcp_bep",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "bazel_mcp_bep",
    deps = [":bazel_mcp_bep_build_script"] + all_crate_deps(
        cargo_only = True,
        normal = True,
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "adversarial_fixtures",
    srcs = glob(["tests/fixtures/**"]),
    visibility = ["//visibility:public"],
)

rust_test(
    name = "unit_test",
    crate = ":bazel_mcp_bep",
    size = "small",
    deps = all_crate_deps(
        cargo_only = True,
        normal_dev = True,
    ),
)

rust_test(
    name = "adversarial_test",
    srcs = ["tests/adversarial.rs"],
    data = [":adversarial_fixtures"],
    size = "small",
    rustc_env = {
        "CARGO_MANIFEST_DIR": "crates/bazel-mcp-bep",
    },
    deps = [":bazel_mcp_bep"] + all_crate_deps(
        cargo_only = True,
        normal = True,
        normal_dev = True,
    ),
)
