[package]
name = "bazel-mcp-bep"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false
build = "build.rs"

[dependencies]
prost.workspace = true
thiserror.workspace = true

[build-dependencies]
prost-build.workspace = true
protoc-bin-vendored.workspace = true

[dev-dependencies]
proptest.workspace = true
