[package]
name = "bazel-mcp-bep"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false
build = "build.rs"

[lints]
workspace = true

[dependencies]
buffa.workspace = true
thiserror.workspace = true

[build-dependencies]
buffa-build.workspace = true
protoc-bin-vendored.workspace = true

[dev-dependencies]
proptest.workspace = true
