load("@crates//:defs.bzl", "all_crate_deps")
load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_rs//rs:cargo_build_script.bzl", "cargo_build_script")
load("@rules_rs//rs:rust_library.bzl", "rust_library")
load("@rules_rs//rs:rust_test.bzl", "rust_test")

proto_library(
    name = "bes_descriptor",
    srcs = ["proto/publish_build_event_subset.proto"],
    strip_import_prefix = "/crates/bazel-mcp-bes/proto",
)

cargo_build_script(
    name = "bazel_mcp_bes_build_script",
    srcs = ["build.rs"],
    build_script_env = {
        "BAZEL_BES_DESCRIPTOR": "$(execpath :bes_descriptor)",
    },
    crate_name = "bazel_mcp_bes_build_script",
    data = glob(["proto/**"]) + [":bes_descriptor"],
    deps = all_crate_deps(build = True),
)

rust_library(
    name = "bazel_mcp_bes",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "bazel_mcp_bes",
    deps = [
        ":bazel_mcp_bes_build_script",
        "//crates/bazel-mcp-bep:bazel_mcp_bep",
    ] + all_crate_deps(
        cargo_only = True,
        normal = True,
    ),
    visibility = ["//visibility:public"],
)

rust_test(
    name = "unit_test",
    crate = ":bazel_mcp_bes",
    size = "small",
    deps = all_crate_deps(
        cargo_only = True,
        normal_dev = True,
    ),
)
