[package]
name = "bazel-mcp-bes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
bazel-mcp-bep.workspace = true
buffa.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tracing.workspace = true

[build-dependencies]
buffa-build.workspace = true
protoc-bin-vendored.workspace = true

[dev-dependencies]
tempfile.workspace = true
