[package]
name = "bazel-mcp-reducer-cases"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
bazel-mcp-bep.workspace = true
bazel-mcp-reducer.workspace = true
bazel-mcp-store.workspace = true
bazel-mcp-types.workspace = true
diagnostic-reducer.workspace = true
clap.workspace = true
regex.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "reducer-cases"
path = "src/main.rs"
