[package]
name = "bazel-mcp-reducer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
bazel-mcp-bep.workspace = true
bazel-mcp-types.workspace = true
quick-xml.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
starlark.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
