[package]
name = "bazel-mcp-reducer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
bazel-mcp-bep.workspace = true
bazel-mcp-types.workspace = true
diagnostic-reducer.workspace = true
quick-xml.workspace = true
regex.workspace = true
serde.workspace = true
starlark.workspace = true
thiserror.workspace = true

[dev-dependencies]
diagnostic-reducer = { workspace = true, features = ["test-support"] }
serde_json.workspace = true
tempfile.workspace = true
