load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rs//rs:rust_library.bzl", "rust_library")
load("@rules_rs//rs:rust_test.bzl", "rust_test")

rust_library(
    name = "bazel_mcp_runner",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "bazel_mcp_runner",
    deps = [
        "//crates/bazel-mcp-bep:bazel_mcp_bep",
        "//crates/bazel-mcp-policy:bazel_mcp_policy",
        "//crates/bazel-mcp-reducer:bazel_mcp_reducer",
        "//crates/bazel-mcp-store:bazel_mcp_store",
        "//crates/bazel-mcp-types:bazel_mcp_types",
    ] + all_crate_deps(
        cargo_only = True,
        normal = True,
    ),
    visibility = ["//visibility:public"],
)

rust_test(
    name = "unit_test",
    crate = ":bazel_mcp_runner",
    size = "small",
    deps = all_crate_deps(
        cargo_only = True,
        normal_dev = True,
    ),
)

rust_test(
    name = "process_test",
    srcs = ["tests/process.rs"],
    size = "small",
    deps = [
        ":bazel_mcp_runner",
        "//crates/bazel-mcp-bep:bazel_mcp_bep",
        "//crates/bazel-mcp-policy:bazel_mcp_policy",
        "//crates/bazel-mcp-store:bazel_mcp_store",
        "//crates/bazel-mcp-types:bazel_mcp_types",
    ] + all_crate_deps(
        cargo_only = True,
        normal = True,
        normal_dev = True,
    ),
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)
