load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rs//rs:rust_binary.bzl", "rust_binary")
load("@rules_rs//rs:rust_library.bzl", "rust_library")
load("@rules_rs//rs:rust_test.bzl", "rust_test")

rust_library(
    name = "bazel_mcp_server",
    srcs = glob(["src/**/*.rs"], exclude = ["src/main.rs"]),
    crate_name = "bazel_mcp_server",
    deps = [
        "//crates/bazel-mcp-policy:bazel_mcp_policy",
        "//crates/bazel-mcp-runner:bazel_mcp_runner",
        "//crates/bazel-mcp-store:bazel_mcp_store",
        "//crates/bazel-mcp-types:bazel_mcp_types",
    ] + all_crate_deps(
        cargo_only = True,
        normal = True,
    ),
    rustc_env = {
        "CARGO_PKG_DESCRIPTION": "A token-efficient MCP server for Bazel invocations",
    },
    version = "0.3.0",  # x-release-please-version
)

rust_binary(
    name = "bazel-mcp",
    srcs = ["src/main.rs"],
    crate_name = "bazel_mcp",
    deps = [":bazel_mcp_server"] + all_crate_deps(
        cargo_only = True,
        normal = True,
    ),
    visibility = ["//visibility:public"],
)

rust_test(
    name = "unit_test",
    crate = ":bazel_mcp_server",
    size = "small",
    deps = all_crate_deps(
        cargo_only = True,
        normal_dev = True,
    ),
)

rust_test(
    name = "shutdown_test",
    srcs = ["tests/shutdown.rs"],
    data = [":bazel-mcp"],
    size = "small",
    deps = all_crate_deps(
        cargo_only = True,
        normal = True,
        normal_dev = True,
    ),
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)
