[package]
name = "bazel-mcp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
publish = false

[package.metadata.dist]
dist = true

[[bin]]
name = "bazel-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bazel-mcp-policy.workspace = true
bazel-mcp-runner.workspace = true
bazel-mcp-store.workspace = true
bazel-mcp-types.workspace = true
clap.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toon-format.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
nix.workspace = true
tempfile.workspace = true
