load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rs//rs:rust_library.bzl", "rust_library")
load("@rules_rs//rs:rust_test.bzl", "rust_test")

rust_library(
    name = "bazel_mcp_types",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "bazel_mcp_types",
    deps = all_crate_deps(
        cargo_only = True,
        normal = True,
    ),
    visibility = ["//visibility:public"],
)

rust_test(
    name = "unit_test",
    crate = ":bazel_mcp_types",
    size = "small",
    deps = all_crate_deps(
        normal_dev = True,
    ),
)
