load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rs//rs:rust_binary.bzl", "rust_binary")
load("@rules_rs//rs:rust_library.bzl", "rust_library")
load("@rules_rs//rs:rust_test.bzl", "rust_test")

rust_library(
    name = "diagnostic_reducer_cli",
    srcs = ["src/lib.rs"],
    crate_name = "diagnostic_reducer_cli",
    deps = [
        "//crates/diagnostic-reducer:diagnostic_reducer",
    ] + all_crate_deps(
        cargo_only = True,
        normal = True,
    ),
    visibility = ["//visibility:public"],
)

rust_binary(
    name = "diagnostic-reduce",
    srcs = ["src/main.rs"],
    crate_name = "diagnostic_reduce",
    deps = [
        ":diagnostic_reducer_cli",
        "//crates/diagnostic-reducer:diagnostic_reducer",
    ] + all_crate_deps(
        cargo_only = True,
        normal = True,
    ),
    visibility = ["//visibility:public"],
)

rust_test(
    name = "unit_test",
    crate = ":diagnostic_reducer_cli",
    size = "small",
    deps = all_crate_deps(
        cargo_only = True,
        normal_dev = True,
    ),
)
