[package]
name = "diagnostic-reducer-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
license = "MIT"
authors = ["Eric Hauser"]
repository = "https://github.com/ewhauser/bazel-mcp"
description = "Provider-neutral streaming state machine for bounded diagnostic reduction"
keywords = ["diagnostics", "logs", "parser", "ci"]
categories = ["development-tools", "parsing"]

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
