load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rs//rs:rust_library.bzl", "rust_library")
load("@rules_rs//rs:rust_test.bzl", "rust_test")

rust_library(
    name = "diagnostic_reducer",
    srcs = glob(["src/**/*.rs"]),
    crate_features = ["test-support"],
    crate_name = "diagnostic_reducer",
    deps = all_crate_deps(
        cargo_only = True,
        normal = True,
    ) + ["//crates/diagnostic-reducer-core:diagnostic_reducer_core"],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "unit_test",
    crate = ":diagnostic_reducer",
    size = "small",
    deps = all_crate_deps(
        cargo_only = True,
        normal_dev = True,
    ),
)
