[package]
name = "diagnostic-reducer"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
license = "MIT"
authors = ["Eric Hauser"]
repository = "https://github.com/ewhauser/bazel-mcp"
description = "Deterministic, source-agnostic reduction of compiler and test diagnostics"
keywords = ["diagnostics", "logs", "parser", "ci"]
categories = ["development-tools", "parsing"]

[lints]
workspace = true

[features]
test-support = []

[dependencies]
diagnostic-reducer-core.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "streaming"
harness = false
