module(name = "bazel_mcp_reducer_python_examples")

bazel_dep(name = "rules_python", version = "2.2.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.12")
python.toolchain(python_version = "3.12")
use_repo(
    python,
    "pythons_hub",
    python = "python_versions",
)
