module(name = "bazel_mcp_reducer_rust_examples")

bazel_dep(name = "rules_rust", version = "0.71.3")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.96.1"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")
